add a bit of styling

--- a/src/components/SideBar.module.css
+++ b/src/components/SideBar.module.css
@@ -3,27 +3,30 @@
   padding: 2px;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .button {
   border: none;
-  background: #ff9966;
-  color: white;
-  padding: 8px 16px;
-  margin: 0 0 8px;
+  background: rgb(221, 217, 217);
+  margin: 0 0 20px;
+  border-radius: 2px;
   cursor: pointer;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  height: 60px;
+  width: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button:hover {
+  background: #fff;
+}
+
+.button img {
+  width: 50px;
 }
 
 .title {
   color: white;
-}
-
-.link {
-  color: white;
-  text-decoration: none;
-  margin-bottom: 8px;
-  font-size: 2rem;
 }
