--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+body, button {
   margin: 0;
   overflow: hidden;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
