--- a/src/components/Admin.module.css
+++ b/src/components/Admin.module.css
@@ -5,6 +5,8 @@
   top: 0;
   left: 0;
   background-color: rgba(0,0,0,0.8);
+  padding: 20px;
+  border: 20px solid rgba(255, 255, 255, 0.4);
 }
 
 .controlsContainer {
